--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
     "version": "1.0.0",
     "description": "A simple plugin for embedding Google Maps with a marker.",
     "main": "main.js",
-
-    },
     "repository": {
-      "type": "git",
-      "url": "https://github.com/Biasiolo/Google_Maps_Plugin" 
+        "type": "git",
+        "url": "https://github.com/Biasiolo/Google_Maps_Plugin"
     },
     "keywords": [
-      "maps",
-      "google maps",
-      "plugin"
-      "javascript"
+        "maps",
+        "google maps",
+        "plugin",
+        "javascript"
     ],
     "author": "Biasiolo",
     "license": "MIT",
     "dependencies": {
-      "jquery": "^3.7.1"
+        "jquery": "^3.7.1"
     }
+}
